[FIX] Topbar min-height needed to prevent page content from overlapping black topbar background when module has no content.
git-svn-id: https://svn.code.sf.net/p/tikiwiki/code/branches/14.x@54928 b456876b-0849-0410-b77d-98878d47e9d5

--- a/themes/fivealive/css/fivealive.css
+++ b/themes/fivealive/css/fivealive.css
@@ -7386,8 +7386,11 @@ header.header a:visited {
 }
 @media (min-width: 992px) {
   .navbar-default .navbar-nav > li > a {
-    border-radius: none;
+    border-radius: 0;
     background: transparent !important;
+  }
+  .topbar {
+    min-height: 34px;
   }
 }
 .calhighlight {
