--- a/themes/fivealive/less/tiki-selectors.less
+++ b/themes/fivealive/less/tiki-selectors.less
@@ -149,8 +149,11 @@ header.header {
 }
 @media (min-width: @screen-md-min) {
   .navbar-default .navbar-nav > li > a {
-  border-radius: none;
+  border-radius: 0;
   background: transparent !important;
+  }
+  .topbar {
+    min-height: 34px;
   }
 }
 
